// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Configuration Default play-test 1`] = `
<div data-testid="mock-configuration">
  <pre>
    {
    "application": {
        "description": "This is a description for a mock application.",
        "id": "mock-app-id",
        "name": "A Mock Application",
        "slug": "mock-app-id-slug",
        "title": "A Mock Application"
    }
}
  </pre>
</div>
`;

exports[`Configuration Error play-test 1`] = `
<div data-testid="error-message">
  useConfiguration must be used within Configuration.Provider!
</div>
`;

exports[`Configuration FallbackSlug play-test 1`] = `
<div data-testid="mock-configuration">
  <pre>
    {
    "application": {
        "description": "This is a description for a mock application.",
        "id": "fallback-slug",
        "name": "",
        "slug": "fallback-slug",
        "title": ""
    }
}
  </pre>
</div>
`;

exports[`Configuration FallbackTitle play-test 1`] = `
<div data-testid="mock-configuration">
  <pre>
    {
    "application": {
        "description": "This is a description for a mock application.",
        "id": "mock-app-id",
        "name": "A Mock Application",
        "slug": "mock-app-id-slug",
        "title": "A Mock Application"
    }
}
  </pre>
</div>
`;
